[tool.poetry]
name = "myApp"
version = "0.1.0"
description = ""
authors = ["brfluid <brfluid@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
